# TestProgettoProfCitrolo_SalvatoreMelfa

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
Dataset/: Housing.csv:Zone.Identifier
mcp_demo/: __main__.py  server.py
mcp_server_imap_gmail/: __main__.py  server.py
